2008-04-17  Maynard Johnson  <maynardj@us.ibm.com>

	* m4/binutils.m4: Revert previous patch as it was buggy

2008-04-16  Maynard Johnson  <maynardj@us.ibm.com>

	* m4/binutils.m4:  Fix the bfd_get_synthetic_symtab check
	  in this m4 macro to work correctly with '--with-binutils'
	  configure option 

2008-04-10  Chris J Arges  <arges@linux.vnet.ibm.com>

	* utils/opcontrol:
	For ppc64 architectures, need to check if all user/kernel flags
	per counter match. Then use this value to set user/kernel domain
	profiling.

2008-03-13  Dave Nomura <dcnltc@us.ibm.com>

	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* pp/opreport.cpp:
	gcc 4.3 gives warnings on const function return types

2008-03-03  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: fix error message typo

2008-02-22  Haavard Skinnemoen  <hskinnemoen@atmel.com>

	*  events/Makefile.am:
	*  events/avr32/events:
	*  events/avr32/unit_masks:
	*  libop/op_cpu_type.c:
	*  libop/op_cpu_type.h:
	*  libop/op_events.c:
	*  utils/ophelp.c: Add AVR32 support
 
2008-02-22  Richard Purdie  <rpurdie@openedhand.com>

	* libutil++/file_manip.cpp:
	* pp/oparchive.cpp:
	Check files actually exist before copying or listing the file as part of
	oparchive --list-files.

	The copy_file function breaks if passed a directory as a file to copy 
	since it will create a file at the destination causing subtle bugs.

2008-02-22  Andy Fleming <afleming@freescale.com>

	*  events/Makefile.am:
	*  events/ppc/e300/events:
	*  events/ppc/e300/unit_masks:
	*  libop/op_cpu_type.c:
	*  libop/op_cpu_type.h:
	*  libop/op_events.c:
	*  utils/ophelp.c: Add e300 support
 
2008-02-22  Bob Nelson  <rrnelson@us.ibm.com>

	* utils/opcontrol: Fix loop in dump code when using
	  --session-dir on a network drive.  (clock issues)

2008-02-15  Will Cohen  <wcohen@redhat.com>

	* gui/oprof_start_util.cpp
	* libutil++/file_manip.cpp
	* libutil++/bfd_support.cpp
	* libutil++/bfd_spu_support.cpp
	* libutil++/op_spu_bfd.cpp
	* libutil++/cverb.cpp